--- a/Source/makefile
+++ b/Source/makefile
@@ -1,13 +1,13 @@
 CC=gcc
 CFLAGS=-Wall -Werror
 LIBS=-lcurl -ljson-c
-DEPS=headers/monitor_ce_api.h headers/read_input.h headers/check_thresholds.h
-OBJ=monitor_ce_api.o read_input.o check_thresholds.c
+DEPS=headers/monitor_ce_restapi.h headers/read_input.h headers/check_thresholds.h
+OBJ=monitor_ce_restapi.o read_input.o check_thresholds.c
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-check_rest_api: $(OBJ)
+monitor_ce_restapi: $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 
 .PHONY: clean
